# FSDS-Azure

./: .flake8  .gitignore  DockerFile  Dockerfile  README.md  config.json  main.py  nonstandardcode.py  pyproject.toml  test_cases.py
.github/workflow/: package-ci-cd.yml
.github/workflows/: package-ci-cd.yml
factory/: SaiPunna-ADF-FSDS.json
linkedService/: AzureBlobStorage1_FSDS.json  AzureFunction1.json
pipeline/: pipeline1.json
scripts/: ingest_data_script.py  score_script.py  train_script.py
src/: ingest_data.py  score.py  train.py
src/housing/: ingest_data.py  score.py  train.py
tests/: test_cases.py
tests/unit_tests/: test.py
trigger/: FSDS-pipeline-trigger.json
